--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             Para llegar hacia una propuesta que se alinee con las necesidades del usuario y del negocio, logrando que las tareas que tengan que cumplir en este caso directores de colegios del Callao en el sistema sea mucho más fluida para así evitar que se deba realizar soporte constantemente, tiempo que puede ser invertido en otras actividades del área de desarrollo.
                           </p>
                           <p>
-                            El tiempo del proyecto fue de tres meses y los resultados que se lograron en la etapa de testing hasta llegar al MVP fueron que el flujo era más entendible y el lenguaje también. Desafortunadamente, al ser un proyecto del estado la fecha límite inicial para el diseño UX y área de desarrollo se vió acortada perjudicando al área de desarrollo sin tiempo para implementar por completo el MVP.
+                            El tiempo del proyecto fue de tres meses y los resultados que se lograron en la etapa de testing hasta llegar al MVP fueron que el flujo era más entendible y el lenguaje también. Desafortunadamente, el área de desarrollo no pudo terminar con las actualizaciones del sistema debido a que la fecha límite se modificó a último momento para esta área.
                           </p>
                         </div>
                         <div class="col-11 ">
@@ -227,11 +227,11 @@
                         </div>-->
                         <div class="col-12">
                           <p>
-                            Emprendimiento liderado por Gladys Sulca con el objetivo de empoderar a mamás ayacuchanas a tener su propio sustento dentro de su familia y no depender tanto de una figura masculina realizando bellos bordados con tintes naturales.
+                            Emprendimiento liderado por Gladys Palomino con el objetivo de empoderar a mamás ayacuchanas a tener su propio sustento dentro de su familia y no depender tanto de una figura masculina realizando bellos bordados con tintes naturales.
                             Su taller está ubicado en el departamento de Ayacucho donde tuvimos la oportunidad de ir luego de una serie de entrevistas a profundidad y conocer lo que más desea mejorar a Manos Canelas. 
                           </p>
                           <p>
-                            El propósito del viaje: ¿Cómo mejorar la atención de visitas de turistas al taller sin llegar a ser tan disruptivos y afectar a la forma de trabajo de las mamás en el taller?, teniamos que conocer entonces: Turistas que visitan el taller y mamás ayacuchanas, en el viaje nos dimos cuenta un poco de la realidad de Manos Canelas y que no se realizaban muchas visitas como se nos comentaba y nuestra única fuente de información eran las mamás a las que conocimos y entendimos que el área de procesos se necesita mejorar alineandolo a las necesidades, aspiraciones que ellas tienen.
+                            Luego de identificar junto con Gladys en qué mejorar sus servicios, se hizo un viaje de investigación al taller el cuál, el propósito del viaje era: ¿Cómo mejorar la atención de visitas de turistas al taller sin llegar a ser tan disruptivos y afectar a la forma de trabajo de las mamás en el taller?, teniamos que conocer entonces: Turistas que visitan el taller y mamás ayacuchanas, en el viaje nos dimos cuenta un poco de la realidad de Manos Canelas y que no se realizaban muchas visitas como se nos comentaba y nuestra única fuente de información eran las mamás a las que conocimos y entendimos que el área de procesos se necesita mejorar alineandolo a las necesidades, aspiraciones que ellas tienen.
                           </p>
                           <p>
                             El proyecto aún no culmina, debido a que se cuenta tambien con la disponibilidad de tiempo de Gladys.
